--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.16",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-rewards": "^1.1.1",
     "validator": "^13.0.0"
   },
   "devDependencies": {
